Fixed word breaks and word wraps to work appropriately.

--- a/app/assets/stylesheets/chat.scss
+++ b/app/assets/stylesheets/chat.scss
@@ -188,6 +188,7 @@
 .conversation-content-message {
   color: #4b4f56;
   word-break: break-all;
+  word-wrap: break-word;
 }
 
 
@@ -293,7 +294,7 @@
 .message-body {
   padding: 5px 8px;
   border-radius: 12px;
-  word-break: break-all;
+  word-wrap: break-word;
 }
 
 
