--- a/app/assets/stylesheets/post.scss
+++ b/app/assets/stylesheets/post.scss
@@ -125,7 +125,7 @@
   p {
     line-height: 19px;
     font-size: 14px;
-    word-break: break-all;
+    word-wrap: break-word;
   }
 }
 
